# EStash

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  nixos-env  shell.nix
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust.yml
EStash.AppDir/: AppRun
data/vault_db/: db  snap.0000000000015D5F
data/vault_key_db/: db  snap.00000000000000F6
data/vault_priv_key_db/: db  snap.000000000000094A
jenkinsfiles/: build_homebrew.groovy  build_linux.groovy  build_test_pkgbuilds.groovy
linux/: estash.nix
linux/AUR/git/: .SRCINFO  PKGBUILD
linux/AUR/stable/: .SRCINFO  PKGBUILD
linux/EStash.AppDir/: EStash.desktop
macos/: estash.rb  make-dmg.sh
macos/EStash.app/Contents/: Info.plist
macos/EStash.app/Contents/Resources/: AppIcon.icns
src/: main.rs
src/encrypter/: ecies.rs  key_encrypt.rs  mod.rs
src/hasher/: argon2id.rs  blake3.rs  mod.rs
src/login/: callbacks.rs  core.rs  mod.rs  window.rs
src/signup/: callbacks.rs  core.rs  mod.rs  window.rs
src/start/: window.rs
src/utils/: constants.rs  db.rs  mod.rs
src/vault/: callbacks.rs  core.rs  dry_callbacks.rs  entries_callbacks.rs  mod.rs  value_callbacks.rs  window.rs
windows/: windows-installer.iss
