[package]
name = "estash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.3.1"
rust-argon2 = "1.0.0"
rand = "0.8.5"
rand_hc = "0.3.1"
zeroize = "1.3.0"
crypto_box = "0.7.2"
sled = "0.34.7"
chacha20poly1305 = "0.9.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
base64 = "0.13.0"
fltk = "1.3.16"
fltk-theme = "0.4.2"
fltk-grid = "0.1.4"
