[package]
name = "estash"
authors = ["Obscurely <adrian.obscurely@protonmail.com>"]
version = "0.4.0"
edition = "2021"
rust-version = "1.64" # Minimum rust version, should work with older ones, but this is the one I used.
description = "An encrypted (highly secure) vault to store your data, files, and with the abillity to install them in a desired location."
documentation = "https://github.com/Obscurely/EStash"
repository = "https://github.com/Obscurely/EStash"
homepage = "https://github.com/Obscurely/EStash"

# [profile.release]
# strip = true      # Automatically strip symbols from the binary.
# opt-level = 3     # Optimize for speed.
# lto = true        # instructs the linker to optimize at the link stage
# codegen-units = 1 # Default is 16, the higher the faster compile time, but it may produce slower code.
# panic = "abort"   # Since all of the errors are handled manually, aborting and removing the panic code is nothing, but an improvement.

[dependencies]
blake3 = "1.3.1"
rust-argon2 = "1.0.0"
rand = "0.8.5"
rand_hc = "0.3.1"
zeroize = "1.3.0"
crypto_box = "0.7.2"
sled = "0.34.7"
chacha20poly1305 = "0.9.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
base64 = "0.13.0"
fltk = "1.3.16"
fltk-theme = "0.4.2"
fltk-grid = "0.1.4"
