[package]
name = "estash"
authors = ["Obscurely <adrian.obscurely@protonmail.com>"]
version = "0.6.2"
edition = "2021"
rust-version = "1.64" # Minimum rust version, should work with older ones, but this is the one I used.
description = "An open source, cross-platform, programmed in rust, encrypted digital vault (store files and text) with the capability to set a path and with the click of a button to copy the contents to that file."
documentation = "https://github.com/Obscurely/EStash/blob/master/README.md"
repository = "https://github.com/Obscurely/EStash"
homepage = "https://github.com/Obscurely/EStash"
categories = ["gui", "vault", "encrypt"]
keywords = ["rust", "open-source", "encryption", "cross-platform", "vault", "secure", "rust-lang", "encrypted", "rustlang", "encrypt", "cross-platform-app"]
readme = "README.md"
license = "GPL-3.0-only"

[package.metadata.deb]
maintainer = "Obscurely <adrian.obscurely@protonmail.com>"
copyright = "2022, 2022 <adrian.obscurely@protonmail.com>"
license-file = ["LICENSE", "0"]
extended-description = """\
An open source, cross-platform, programmed in rust, encrypted digital vault 
(store files and text) with the capability to set a path and with the click of a button 
to copy the content to that file. For example store your ssh keys safely, put your 
vault in like your github dotfiles, download it on another machine and easily 
install those keys.""""
depends = "$auto"
section = "utility"

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = 3     # Optimize for speed.
lto = true        # instructs the linker to optimize at the link stage
codegen-units = 1 # Default is 16, the higher the faster compile time, but it may produce slower code.
panic = "abort"   # Since all of the errors are handled manually, aborting and removing the panic code is nothing, but an improvement.

[dependencies]
blake3 = "1.3.1"
rust-argon2 = "1.0.0"
rand = "0.8.5"
rand_hc = "0.3.1"
zeroize = "1.3.0"
crypto_box = "0.7.2"
sled = "0.34.7"
chacha20poly1305 = "0.9.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
fltk = "1.3.16"
dirs = "4.0.0"
